<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/searchLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_toLatitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_toLatitude" />

    <TextView
        android:id="@+id/searchLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_toLongitude"
        app:layout_constraintTop_toTopOf="@+id/search_toLongitude" />

    <EditText
        android:id="@+id/search_toLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="Latitude"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/searchLatitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_toLongitude" />

    <EditText
        android:id="@+id/search_toLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="Longitude"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/searchLongitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_toCaption" />

    <EditText
        android:id="@+id/search_toCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="Caption"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/searchCaption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_toDate" />

    <TextView
        android:id="@+id/search_fromDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_fromDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_toDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_toDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_toDate" />

    <EditText
        android:id="@+id/search_fromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:ems="10"
        android:hint="From: YYYYMMDD"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/search_fromDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_toDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="To: YYYYMMDD"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/search_toDateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_fromDate" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="52dp"
        android:onClick="search"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_toLatitude" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="52dp"
        android:onClick="cancel"
        android:text="cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/search_toLatitude" />

    <TextView
        android:id="@+id/searchCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_toCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_toCaption" />

</android.support.constraint.ConstraintLayout>